Add configuration for additional charsets in ICQ

BUG: 306401
FIXED-IN: 0.7.0
REVIEW: 110060