plugins/haze/icq-server-settings-widget.h
@@ -34,7 +34,10 @@ public:
                                        QWidget *parent = 0);
     virtual ~IcqServerSettingsWidget();
 
+    virtual void submit();
 private:
+    void initEncodings();
+
     Q_DISABLE_COPY(IcqServerSettingsWidget);
     Ui::IcqServerSettingsWidget *m_ui;
 };
